--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,4 +1,5 @@
-{"initiallCommand": "npm install --legacy-peer-deps",
+{
+  "installCommand": "npm install --legacy-peer-deps",
   "version": 2,
   "builds": [
     {
